# firmware-update

./: Cargo.toml
.github/workflows/: mayhem.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: png.rs
mayhem/: Dockerfile  png.mayhemfile
src/: display.rs  lib.rs  main.rs
src/app/: bios.rs  ec.rs  intel_pmc.rs  mod.rs
src/image/: mod.rs
